tests/ui/traits/unconstrained-projection-normalization.current.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-projection-normalization.rs:13:6
   |
LL | impl<T: ?Sized> Every for Thing {
   |      ^ unconstrained type parameter
   |
help: either remove the type parameter T, or make use of it, for example
   |
LL - impl<T: ?Sized> Every for Thing {
LL + impl Every for Thing {
   |
LL | impl<T: ?Sized> Every for Thing<T> {
   |                                +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
